--- a/build.gradle
+++ b/build.gradle
@@ -11,8 +11,8 @@ apply plugin: 'net.minecraftforge.gradle.forge'
 //Only edit below this line, the above code adds and enables the necessary things for Forge to be setup.
 
 
-version = "5.3.1-MC1.12.2"
-group = "com.yourname.modid" // http://maven.apache.org/guides/mini/guide-naming-conventions.html
+version = "5.3.2-MC1.12.2"
+group = "com.gw.dm" // http://maven.apache.org/guides/mini/guide-naming-conventions.html
 archivesBaseName = "dungeonmobs"
 
 sourceCompatibility = targetCompatibility = '1.8' // Need this here so eclipse task generates correctly.
