--- a/build.gradle
+++ b/build.gradle
@@ -11,7 +11,7 @@ apply plugin: 'net.minecraftforge.gradle.forge'
 //Only edit below this line, the above code adds and enables the necessary things for Forge to be setup.
 
 
-version = "5.3.2-MC1.12.2"
+version = "5.4.0-MC1.12.2"
 group = "com.gw.dm" // http://maven.apache.org/guides/mini/guide-naming-conventions.html
 archivesBaseName = "dungeonmobs"
 
@@ -39,7 +39,7 @@ dependencies {
     //compile "some.group:artifact:version:classifier"
     //compile "some.group:artifact:version"
     
-    compile files ('libs/DLDungeonsAPI-1.4.jar')
+    compile files ('src/main/libs/DLDungeonsAPI-1.4.jar')
       
     // real examples
     //compile 'com.mod-buildcraft:buildcraft:6.0.8:dev'  // adds buildcraft to the dev env
