--- a/.gitignore
+++ b/.gitignore
@@ -107,3 +107,8 @@ sources/Baubles-1.12-1.5.2-api.jar
 /sources/
 /libs/
 extsrcs/Thaumcraft-1.12.2-6.1.BETA16-api.zip
+refresh_workspace.bat
+*.iws___jb_tmp___
+*.iws___jb_old___
+*.java___jb_old___
+*.java___jb_tmp___
